--- a/prepros-6.config
+++ b/prepros-6.config
@@ -5,7 +5,7 @@
   "fileConfigs": [
     {
       "path": "src/views/index.pug",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"src/public/home.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"index.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
     },
     {
       "path": "src/views/home.pug",
@@ -21,7 +21,7 @@
     },
     {
       "path": "src/views/events.pug",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"events.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"src/public/events.html\",\"autoCompile\":true,\"compiler-pug\":{\"enabled\":true,\"pretty\":true}}"
     }
   ],
   "fileTree": {
@@ -45,26 +45,20 @@
   },
   "imports": [
     {
-      "path": "src/views/index.pug",
-      "imports": [
-        "src/views/layouts/header.pug"
-      ]
-    },
-    {
-      "path": "src/views/home.pug",
-      "imports": [
-        "src/views/layouts/header.pug"
-      ]
-    },
-    {
       "path": "src/views/events.pug",
+      "imports": [
+        "src/views/layouts/header.pug"
+      ]
+    },
+    {
+      "path": "src/views/index.pug",
       "imports": [
         "src/views/layouts/header.pug"
       ]
     }
   ],
   "projectView": {
-    "selectedView": "file-tree"
+    "selectedView": "log"
   },
   "fileWatcher": {
     "enabled": true,
@@ -105,7 +99,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7880,
+    "port": 7881,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
